Fix the map rendering on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,13 @@
   padding: 0;
 }
 
+@media screen and (max-width: 700px) {
+  .map-container {
+    order: 1;
+    height: 400px;
+  }
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
